--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="card">
     <div class="logo">
-      <div class="logo-text">RR</div>
+      <div class="logo-text"><img src="img/foto-perfil.jpg" alt="Minha foto de perfil"></div>
     </div>
     <div class="name">Rafael Ribeiro<br><span style="font-size: 12px; opacity: 0.7;">Advogado</span></div>
 
