--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     ✉️ Email
                 </a>
                 
-                <a href="#" 
+                <a href="https://www.linkedin.com/in/rhribeiro-adv/" 
                    class="btn linkedin"
                    aria-label="Acesse o LinkedIn"
                    onclick="handleLinkedInClick()">
