--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Rafael Ribeiro - Advogado">
     <meta property="og:description" content="Especialista em Direito Civil e Imobiliário">
-    <meta property="og:image" content="images/logo.png">
+    <meta property="og:image" content="img/logo.png">
     
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="images/logo.png">
+    <link rel="icon" type="image/png" href="img/logo.png">
 </head>
 <body>
     <!-- Elementos Decorativos Flutuantes -->
@@ -33,8 +33,10 @@
     <div class="card">
         <!-- Cabeçalho com Logo e Informações -->
         <div class="header">
-            <div class="logo-container">
-                <div class="logo">RR</div>
+           <div class="logo-container">
+            <img src="img/logo.png" alt="Logo de Rafael Ribeiro" class="logo">          
+            </div>
+
             </div>
             <h1 class="name">Rafael Ribeiro</h1>
             <p class="title">Advogado</p>
