--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     
     <!-- Meta Tags for SEO -->
-    <meta name="description" content="Rafael Ribeiro - Advogado especialista em Direito Civil e Imobiliário. OAB 352.914-SP">
+    <meta name="description" content="Rafael Ribeiro - Advogado especialista em Direito Civel e Imobiliário. OAB 352.914-SP">
     <meta name="keywords" content="advogado, direito civil, direito imobiliário, OAB, Rafael Ribeiro">
     <meta name="author" content="Rafael Ribeiro">
     
