--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
             <h1 class="name">Rafael Ribeiro</h1>
             <p class="title">Advogado</p>
-            <p class="specialty">Direito Civil e Imobiliário</p>
+            <p class="specialty">Direito Civel e Imobiliário</p>
         </div>
         
         <!-- Conteúdo Principal -->
