--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;600;700&display=swap" rel="stylesheet">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="Imagens/favicon.ico.webp">
+    <link rel="icon" type="image/x-icon" href="imagens/favicon.ico.webp">
 
     <!-- Ícones Flaticon -->
     <link rel="stylesheet" href="https://cdn-uicons.flaticon.com/2.6.0/uicons-brands/css/uicons-brands.css">
@@ -26,7 +26,7 @@
     <header id="header">
         <nav role="navigation" aria-label="Navegação principal">
             <a href="#top" id="logo">
-                <img src="Imagens/logo.png"
+                <img src="imagens/logo.png"
                      alt="Logo Rafael Ribeiro — Advocacia Cível e Imobiliária"
                      width="140"
                      height="48">
@@ -37,18 +37,18 @@
     <main>
         <!-- HERO SECTION -->
         <section id="hero" aria-label="Apresentação">
-            <img src="Imagens/hero-bg.jpg" alt="" class="hero-bg" loading="eager">
+            <img src="imagens/hero-bg.jpg" alt="" class="hero-bg" loading="eager">
             
             <div class="hero-overlay"></div>
 
             <div class="hero-wrapper">
-                <img src="Imagens/hero-perfil.png"
+                <img src="imagens/hero-perfil.png"
                      alt="Rafael Ribeiro - Advogado Cível e Imobiliário"
                      class="hero-perfil"
                      loading="eager">
 
                 <div class="hero-texto">
-                    <img src="Imagens/logo.png"
+                    <img src="imagens/logo.png"
                          alt="Rafael Ribeiro — Advocacia Cível e Imobiliária"
                          class="hero-logo"
                          width="360"
