--- a/index.html
+++ b/index.html
@@ -18,15 +18,16 @@
     <link rel="stylesheet" href="https://cdn-uicons.flaticon.com/2.6.0/uicons-brands/css/uicons-brands.css">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="CSS/style.css">
-    <link rel="stylesheet" href="CSS/responsive.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/script.js"></script>
+
 </head>
 <body id="top">
     <!-- HEADER -->
     <header id="header">
         <nav role="navigation" aria-label="Navegação principal">
             <a href="#top" id="logo">
-                <img src="imagens/logo.png"
+                <img src="./Imagens/logo.png"
                      alt="Logo Rafael Ribeiro — Advocacia Cível e Imobiliária"
                      width="140"
                      height="48">
@@ -37,18 +38,18 @@
     <main>
         <!-- HERO SECTION -->
         <section id="hero" aria-label="Apresentação">
-            <img src="imagens/hero-bg.jpg" alt="" class="hero-bg" loading="eager">
+            <img src="./Imagens/hero-bg.jpg" alt="" class="hero-bg" loading="eager">
             
             <div class="hero-overlay"></div>
 
             <div class="hero-wrapper">
-                <img src="imagens/hero-perfil.png"
+                <img src="./Imagens/hero-perfil.png"
                      alt="Rafael Ribeiro - Advogado Cível e Imobiliário"
                      class="hero-perfil"
                      loading="eager">
 
                 <div class="hero-texto">
-                    <img src="imagens/logo.png"
+                    <img src="./Imagens/logo.png"
                          alt="Rafael Ribeiro — Advocacia Cível e Imobiliária"
                          class="hero-logo"
                          width="360"
