--- a/index.html
+++ b/index.html
@@ -3,24 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rafael Ribeiro — Advogado Especialista | Cível & Imobiliário</title>
-    <meta name="description" content="Rafael Ribeiro — Advocacia cível e imobiliária. Atendimento humano, estratégico e focado em resultados. Atuação em consultoria, contencioso e acompanhamento de imóveis e contratos.">
-
-    <!-- Fonte -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;600;700&display=swap" rel="stylesheet">
-
-    <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="imagens/favicon.ico.webp">
-
-    <!-- Ícones Flaticon -->
-    <link rel="stylesheet" href="https://cdn-uicons.flaticon.com/2.6.0/uicons-brands/css/uicons-brands.css">
-
-    <!-- CSS -->
-    <link rel="stylesheet" href="./css/style.css">
-    <script src="./js/script.js"></script>
-
+    <title>Seu Site</title>
+    
+    <!-- Estilos base primeiro -->
+    <link rel="stylesheet" href="css/style.css">
+    
+    <!-- Responsive por último (sobrescreve quando necessário) -->
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body id="top">
     <!-- HEADER -->
