Add favicon and adjust stylesheet link order

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rafael Ribeiro Advogado</title>
         <!-- Ícones Flaticon -->
-    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-brands/css/uicons-brands.css'>
-    <!-- Estilos base primeiro -->
+<link rel="icon" type="image/webp" href="favicon.webp">
+        <!-- Estilos base primeiro -->
     <link rel="stylesheet" href="css/style.css">
     
     <!-- Responsive por último (sobrescreve quando necessário) -->
