Add Flaticon UIcons stylesheet link

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rafael Ribeiro Advogado</title>
-        <!-- Ícones Flaticon -->
-<link rel="icon" type="image/webp" href="favicon.webp">
-        <!-- Estilos base primeiro -->
+
+<!-- Flaticon UIcons (Brands) -->
+<link rel="stylesheet"
+      href="https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css">
     <link rel="stylesheet" href="css/style.css">
     
     <!-- Responsive por último (sobrescreve quando necessário) -->
