Add Instagram link to index.html

--- a/index.html
+++ b/index.html
@@ -119,6 +119,16 @@
                    class="contato-icon">
                     <i class="fi fi-brands-linkedin"></i>
                 </a>
+                
+                    <!-- Instagram -->
+                  <a id="instagram"
+                   href="https://www.instagram.com/rhribeiro.adv/"
+                   target="_blank"
+                   rel="noopener"
+                   aria-label="Perfil de Rafael Ribeiro no Instagram"
+                   class="contato-icon">
+                    <i class="fi fi-brands-linkedin"></i>
+                </a>
             </address>
         </section>
     </main>
