Replace LinkedIn icon with Instagram icon

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                    rel="noopener"
                    aria-label="Perfil de Rafael Ribeiro no Instagram"
                    class="contato-icon">
-                    <i class="fi fi-brands-linkedin"></i>
+                    <i class="fi fi-brands-instagram"></i>
                 </a>
             </address>
         </section>
