Add favicon to index.html
Add favicon link to the HTML head.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rafael Ribeiro Advogado</title>
+    <link rel="icon" type="image/webp" href="/favicon.webp">
+
 
 <!-- Flaticon UIcons (Brands) -->
 <link rel="stylesheet"
