--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rafael Ribeiro Advogado</title>
-    <link rel="icon" type="image/webp" href="/favicon.webp">
 
+<link rel="icon" type="image/webp" href="./Imagens/favicon.webp">
 
 <!-- Flaticon UIcons (Brands) -->
 <link rel="stylesheet"
