--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rafael Ribeiro Advogado</title>
 
-<link rel="icon" type="image/webp" href="./Imagens/favicon.webp">
+<link rel="icon" type="image/webp" href="./Imagens/favicon.ico.webp">
 
 <!-- Flaticon UIcons (Brands) -->
 <link rel="stylesheet"
